syntax = "proto3";

option java_outer_classname = "ArtifactsOuterClass";

option java_package = "org.hyperledger.fabric.example";

message Contract {
    string __guid = 1;

    string __implementingClassName = 2;

    string __implementingClassArchiveName = 3;

    string __implementingClassData = 4;

}
message ContractOrGUID {
    oneof either {
        Contract obj = 1;
        string guid = 2;
    }

}
message Artifact {
    oneof state {
        Initialized stateInitialized = 1;
        Stored stateStored = 2;
    }

    string __guid = 3;

    message Initialized {
    }

    message Stored {
    }

    string upstreamArtifact = 4;

    string ipfsPath = 5;

    string uuid = 6;

    string friendlyname = 7;

}
message ArtifactOrGUID {
    oneof either {
        Artifact obj = 1;
        string guid = 2;
    }

}
